--- a/_posts/core-samples/2014-02-15-live-post.md
+++ b/_posts/core-samples/2014-02-15-live-post.md
@@ -7,8 +7,4 @@ tags : [test]
 {% include JB/setup %}
 
 ## Test 2
-This post is a live edit
-
- ```javascript
- var s = "JavaScript syntax highlighting";
- alert(s);
+**This post is a live edit**
