--- a/_posts/core-samples/2014-02-17-ideas.md
+++ b/_posts/core-samples/2014-02-17-ideas.md
@@ -1,9 +1,13 @@
 ---
 layout: post
-category : development
-tagline: "a post to the main page"
-tags : [development]
+category: development
+tagline: a post to the main page
+tags: 
+  - development
+published: true
 ---
+
 {% include JB/setup %}
 
 ## Ideas
+* test
