--- a/_posts/core-samples/2014-02-17-ideas.md
+++ b/_posts/core-samples/2014-02-17-ideas.md
@@ -4,7 +4,7 @@ category: development
 tagline: a post to the main page
 tags: 
   - development
-published: false
+published: true
 ---
 
 {% include JB/setup %}
