--- a/_posts/core-samples/2014-02-17-ideas.md
+++ b/_posts/core-samples/2014-02-17-ideas.md
@@ -7,3 +7,18 @@ tags : [development]
 {% include JB/setup %}
 
 ## Ideas
+Lorem ipsum dolor
+{% highlight JavaScript %}
+function change(){
+
+   var myNewTitle = document.getElementById('myTextField').value;
+   if( myNewTitle.length==0 ){
+       alert('Write Some real Text please.');
+   return;
+   }
+
+   var title = document.getElementById('title');
+   title.innerHTML = myNewTitle;
+
+}
+{% endhighlight %}
