--- a/_posts/core-samples/2014-02-17-ideas.md
+++ b/_posts/core-samples/2014-02-17-ideas.md
@@ -11,7 +11,7 @@ published: true
 
 ## Ideas
 Lorem ipsum dolor
-```javascript
+{% highlight JavaScript %}
 function change(){
 
    var myNewTitle = document.getElementById('myTextField').value;
@@ -24,4 +24,4 @@ function change(){
    title.innerHTML = myNewTitle;
 
 }
-```
+{% endhighlight %}
