{% highlight python %} def yourfunction():      print "Hello World!" {% endhighlight %}

--- a/_posts/core-samples/2014-02-17-ideas.md
+++ b/_posts/core-samples/2014-02-17-ideas.md
@@ -11,17 +11,7 @@ published: true
 
 ## Ideas
 Lorem ipsum dolor
-{% highlight JavaScript %}
-function change(){
-
-   var myNewTitle = document.getElementById('myTextField').value;
-   if( myNewTitle.length==0 ){
-       alert('Write Some real Text please.');
-   return;
-   }
-
-   var title = document.getElementById('title');
-   title.innerHTML = myNewTitle;
-
-}
+{% highlight python %}
+def yourfunction():
+     print "Hello World!"
 {% endhighlight %}
