--- a/_posts/core-samples/2014-02-16-map.md
+++ b/_posts/core-samples/2014-02-16-map.md
@@ -7,4 +7,4 @@ tags : [jekyll github frontpage]
 {% include JB/setup %}
 
 ## Test to include a GeoJSON from Github
-{% include ./_data/drinking_water.geojson %}
+{% include ../../assets/geojson/drinking_water.geojson %}
