--- a/_posts/core-samples/2014-02-16-map.md
+++ b/_posts/core-samples/2014-02-16-map.md
@@ -7,4 +7,4 @@ tags : [jekyll github frontpage]
 {% include JB/setup %}
 
 ## Test to include a GeoJSON from Github
-
+<script src="https://embed.github.com/view/geojson/benbalter/dc-wifi-social/master/bars.geojson"></script>
