--- a/_posts/core-samples/2014-02-17-ideas.md
+++ b/_posts/core-samples/2014-02-17-ideas.md
@@ -11,3 +11,7 @@ published: true
 
 ## Ideas
 Lorem ipsum dolor
+{% highlight javascript %}
+var helloWorld = "Hello Jekyll";
+alert(helloWorld);
+{% endhighlight %}
