map test successful

--- a/_posts/core-samples/2014-02-16-map.md
+++ b/_posts/core-samples/2014-02-16-map.md
@@ -7,4 +7,8 @@ tags : [jekyll github frontpage]
 {% include JB/setup %}
 
 ## Test to include a GeoJSON from Github
+I queried the [OSM Overpass Turbo API](http://overpass-turbo.eu/) with the wizard for amenity=drinking_water and exported it
+as GeoJSON and saved it to the assets/geojson folder of my jekyll site. This is very nice and simple!
+
+## Are you thirsty?
 <script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson"></script>
