--- a/_posts/core-samples/2014-02-16-map.md
+++ b/_posts/core-samples/2014-02-16-map.md
@@ -10,13 +10,5 @@ tags : [jekyll github frontpage]
 I queried the [OSM Overpass Turbo API](http://overpass-turbo.eu/) with the wizard for amenity=drinking_water and exported it
 as GeoJSON and saved it to the assets/geojson folder of my jekyll site. This is very nice and simple!
 
-## Howto include
-Use the script tag to include the map:
-{% highlight javascript %}
-<script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson"></script>
-{% endhighlight %}
-
-### Are you thirsty?
-This are places where you can find free drinking water in Munich
-
+## Are you thirsty?
 <script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson"></script>
