--- a/_posts/core-samples/2014-02-16-map.md
+++ b/_posts/core-samples/2014-02-16-map.md
@@ -17,6 +17,6 @@ Use the script tag to include the map:
 {% endhighlight %}
 
 ### Are you thirsty?
-This are places where you can find free drinking water in Munich
+Go to these places to find free drinking water in Munich (Dated 2014-02-17, Thanks to OpenStreetMap Contributors)
 
 <script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson"></script>
