--- a/_posts/core-samples/2014-02-16-map.md
+++ b/_posts/core-samples/2014-02-16-map.md
@@ -8,9 +8,9 @@ tags : [jekyll github frontpage]
 
 ## Test to include a GeoJSON from Github
 I queried the [OSM Overpass Turbo API](http://overpass-turbo.eu/) with the wizard for amenity=drinking_water and exported it
-as GeoJSON and saved it to the assets/geojson folder of my jekyll site. This is very nice and simple!
+as GeoJSON and saved it to the assets/geojson folder of my Jekyll site. This is very nice and simple!
 
-## Howto include
+## Howto use in the Jekyll post (or in your readme.md)
 Use the script tag in your Jekyll post to include the map:
 {% highlight javascript %}
 <script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson"></script>
