--- a/_posts/core-samples/2014-02-16-map.md
+++ b/_posts/core-samples/2014-02-16-map.md
@@ -10,13 +10,13 @@ tags : [jekyll github frontpage]
 I queried the [OSM Overpass Turbo API](http://overpass-turbo.eu/) with the wizard for amenity=drinking_water and exported it
 as GeoJSON and saved it to the assets/geojson folder of my Jekyll site. This is very nice and simple!
 
-## Howto use in the Jekyll post (or in your readme.md)
+## Howto use in the Jekyll Post
 Use the script tag in your Jekyll post to include the map:
 {% highlight javascript %}
-<script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson"></script>
+<script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson" />
 {% endhighlight %}
 
 ### Are you thirsty?
 Go to these places to find free drinking water in Munich (Dated 2014-02-17, Thanks to OpenStreetMap Contributors)
 
-<script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson"></script>
+<script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson" />
