--- a/_posts/core-samples/2014-02-16-map.md
+++ b/_posts/core-samples/2014-02-16-map.md
@@ -13,10 +13,10 @@ as GeoJSON and saved it to the assets/geojson folder of my Jekyll site. This is 
 ## Howto use in the Jekyll Post
 Use the script tag in your Jekyll post to include the map:
 {% highlight javascript %}
-<script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson" />
+<script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson"></script>
 {% endhighlight %}
 
 ### Are you thirsty?
 Go to these places to find free drinking water in Munich (Dated 2014-02-17, Thanks to OpenStreetMap Contributors)
 
-<script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson" />
+<script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson"></script>
