--- a/_posts/core-samples/2014-02-16-map.md
+++ b/_posts/core-samples/2014-02-16-map.md
@@ -6,7 +6,7 @@ tags : [jekyll github frontpage]
 ---
 {% include JB/setup %}
 
-## Test to include a GeoJSON from Github
+## Include a GeoJSON hosted on GitHub in Markdown
 I queried the [OSM Overpass Turbo API](http://overpass-turbo.eu/) with the wizard for amenity=drinking_water and exported it
 as GeoJSON and saved it to the assets/geojson folder of my Jekyll site. This is very nice and simple!
 
