--- a/_posts/core-samples/2014-02-16-map.md
+++ b/_posts/core-samples/2014-02-16-map.md
@@ -8,7 +8,7 @@ tags : [jekyll github frontpage]
 
 ## Include a GeoJSON hosted on GitHub
 The path to follow is to query the [OSM Overpass Turbo API](http://overpass-turbo.eu/) with the wizard e.g.
- for amenity=drinking_water ([more details in German](http://blog.openstreetmap.de/blog/2014/01/der-turbo-fuer-die-overpass-api/)
+ for "Trinkbrunnen" ([more details in German](http://blog.openstreetmap.de/blog/2014/01/der-turbo-fuer-die-overpass-api/))
  and exported it as GeoJSON. Then the file is saved it to the assets/geojson folder of my Jekyll site and pushed to GitHub. This is very nice and simple!
 
 ## Howto use in the Jekyll Post
