map problem description

--- a/_posts/core-samples/2014-02-16-map.md
+++ b/_posts/core-samples/2014-02-16-map.md
@@ -9,7 +9,7 @@ tags : [jekyll github frontpage]
 ## Include a GeoJSON hosted on GitHub
 The path to follow is to query the [OSM Overpass Turbo API](http://overpass-turbo.eu/) with the wizard e.g.
  for "Trinkbrunnen" ([more details in German](http://blog.openstreetmap.de/blog/2014/01/der-turbo-fuer-die-overpass-api/))
- and exported it as GeoJSON file. Then the file is saved it to the `assets/geojson/drinking_water.json` folder of my Jekyll site and pushed to GitHub. This is very nice and simple!
+ and exported it as GeoJSON file. Then the file is saved it to the assets/geojson/drinking_water.json` folder of my Jekyll site and pushed to GitHub. This is very nice and simple!
 
 ## Howto use in the Jekyll Post
 Use the script tag in your Jekyll post to include the map:
@@ -18,6 +18,7 @@ Use the script tag in your Jekyll post to include the map:
 {% endhighlight %}
 
 ### Are you thirsty?
-Go to these places to find free drinking water in Munich (Dated 2014-02-17, Thanks to OpenStreetMap Contributors)
+Go to these places to find free drinking water in Munich (Dated 2014-02-17, Thanks to OpenStreetMap Contributors). It seems as the
+map is not loaded properly on every page load (it tries to zoom to the map data extent and maybe the content is not ready yet?).
 
 <script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson"></script>
