--- a/_posts/core-samples/2014-02-16-map.md
+++ b/_posts/core-samples/2014-02-16-map.md
@@ -11,7 +11,7 @@ The path to follow is to query the [OSM Overpass Turbo API](http://overpass-turb
  for "Trinkbrunnen" ([more details in German](http://blog.openstreetmap.de/blog/2014/01/der-turbo-fuer-die-overpass-api/))
  and exported it as GeoJSON file. Then the file is saved it to the assets/geojson/drinking_water.json` folder of my Jekyll site and pushed to GitHub. This is very nice and simple!
 
-## Howto use in the Jekyll Post
+## Howto use the map data in a Jekyll Post
 Use the script tag in your Jekyll post to include the map:
 {% highlight javascript %}
 <script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson"></script>
