--- a/_posts/core-samples/2014-02-16-map.md
+++ b/_posts/core-samples/2014-02-16-map.md
@@ -19,6 +19,6 @@ Use the script tag in your Jekyll post to include the map:
 
 ### Are you thirsty?
 Go to these places to find free drinking water in Munich (Dated 2014-02-17, Thanks to OpenStreetMap Contributors). It seems as the
-map is not loaded properly on every page load (it tries to zoom to the map data extent and maybe the content is not ready yet?).
+map is not loaded properly on every page load (the widget tries to zoom to the map data extent and maybe the content is not ready yet?).
 
 <script src="https://embed.github.com/view/geojson/Maltretieren/maltretieren.github.com/master/assets/geojson/drinking_water.geojson"></script>
