--- a/_posts/core-samples/frontpage/2014-02-17-sandbox.md
+++ b/_posts/core-samples/frontpage/2014-02-17-sandbox.md
@@ -1,17 +1,22 @@
 ---
 layout: post
-category: development
+category: frontpage
 tagline: a post to the main page
 tags: 
   - development
+  - test
 published: true
 ---
 
 {% include JB/setup %}
 
-## Ideas
+## Syntax Highlighting
 Lorem ipsum dolor
 {% highlight javascript %}
 var helloWorld = "Hello Jekyll";
 alert(helloWorld);
 {% endhighlight %}
+
+## Includes
+{% include widgets/tagCloud.html %}
+{% include widgets/timeLine.html %}
