--- a/_posts/core-samples/2014-02-19-findings.md
+++ b/_posts/core-samples/2014-02-19-findings.md
@@ -1,2 +1,10 @@
+---
+layout: post
+category: development
+tagline: a post to the main page
+tags:
+  - development
+published: true
+---
 An easy way to use Jekyll and Github Pages as a "database".
 https://github.com/rypan/jekyll-db
