--- a/_posts/core-samples/2014-02-19-findings.md
+++ b/_posts/core-samples/2014-02-19-findings.md
@@ -11,3 +11,6 @@ published: true
 ## Github Pages as a "database"
 An easy way to use Jekyll and Github Pages as a "database".
 https://github.com/rypan/jekyll-db
+
+## Hosting comments on GitHub
+http://ivanzuzak.info/2011/02/18/github-hosted-comments-for-github-hosted-blogs.html
