--- a/_posts/core-samples/frontpage/2014-01-01-sandbox.md
+++ b/_posts/core-samples/frontpage/2014-01-01-sandbox.md
@@ -7,6 +7,7 @@ tags:
   - development
   - test
 published: true
+commentIssueId: 1
 ---
 
 {% include JB/setup %}
@@ -24,4 +25,5 @@ alert(helloWorld);
 
 ## Include GISTS
 {% gist 9092977 %}
+
 
