--- a/_posts/core-samples/2014-02-19-findings.md
+++ b/_posts/core-samples/2014-02-19-findings.md
@@ -14,3 +14,6 @@ https://github.com/rypan/jekyll-db
 
 ## Hosting comments on GitHub
 http://ivanzuzak.info/2011/02/18/github-hosted-comments-for-github-hosted-blogs.html
+
+## Nodejs Video Tutorials
+[Modular web applications with Node.js and Express](http://vimeo.com/56166857)
