--- a/_posts/core-samples/2014-01-01-sandbox.md
+++ b/_posts/core-samples/2014-01-01-sandbox.md
@@ -14,7 +14,7 @@ commentIssueId: 1
 
 ## Syntax Highlighting
 Lorem ipsum dolor
-{% highlight javascript %}
+{% highlight javascript linenos=table %}
 var helloWorld = "Hello Jekyll";
 alert(helloWorld);
 {% endhighlight %}
