--- a/_posts/core-samples/2014-01-01-sandbox.md
+++ b/_posts/core-samples/2014-01-01-sandbox.md
@@ -13,7 +13,7 @@ commentIssueId: 1
 {% include JB/setup %}
 
 ## Syntax Highlighting
-Lorem ipsum dolor
+For more pygment css styles see [pygments-css](https://github.com/richleland/pygments-css) : replace .codehilite with .highlight for these to work with Jekyll
 {% highlight javascript linenos=table %}
 var helloWorld = "Hello Jekyll";
 alert(helloWorld);
@@ -25,5 +25,11 @@ alert(helloWorld);
 
 ## Include GISTS
 {% gist 9092977 %}
+
+## Embed YouTube videos
+<iframe width="560" height="315"  src="//www.youtube.com/embed/XK-dLdLQdIE" frameborder="0"></iframe>
+
+## Images
+![Develop local, run remote](/assets/images/DevEnvironment.png)
 
 
