--- a/_posts/core-samples/table/2014-03-14-step-down1.md
+++ b/_posts/core-samples/table/2014-03-14-step-down1.md
@@ -7,8 +7,9 @@ price: 2.38$
 link: http://www.ebay.com/itm/LM2596-Step-Down-Adjustable-DC-DC-Power-Supply-Module-New-/330646303458
 
 categories:
--
+- electronics
 
 tags:
 - prototyping
+- accessoire
 ---
