--- a/_posts/core-samples/raspi-accessoires/2014-03-14-usb-to-rs232.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-usb-to-rs232.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/usb-out.jpg
 product: USB To RS232 TTL PL2303HX
 description: USB To RS232 TTL PL2303HX Auto Converter Module Converter Adapter For arduino
@@ -14,3 +14,7 @@ tags:
 - converter
 - accessoire
 ---
+
+<img src="{{page.preview}}" style="width:100px"/>
+
+I usually use it to get power out of the usb plug - you can get 3.3 volt or 5 volt.
