fixed layout stuff

--- a/_posts/core-samples/raspi-accessoires/2014-03-14-1-basic-kit.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-1-basic-kit.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/basic-kit.jpg
 product: Arduino Sidekick Basic Kit – Arduino DIY Kit
 description:
