--- a/_posts/core-samples/raspi-accessoires/2014-03-14-1-lcd.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-1-lcd.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/display.jpg
 product: 2004 LCD Module Display Anzeigen 20×4 Zeichen
 description: kompatibel mit HD44780
