--- a/_posts/core-samples/raspi-accessoires/2014-03-14-1-rt3570-wifi.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-1-rt3570-wifi.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/rt5370-wifi.jpg
 product: RT5370 USB Wifi WLAN Dongle Stick Adapter 5dBi Antenne
 description:
