--- a/_posts/core-samples/raspi-accessoires/2014-03-14-5k-poti.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-5k-poti.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/poti1.jpg
 product: 5K ohm Trim Pot Trimmer Potentiometer 3296W
 description: 10pcs, 3296W-502
