--- a/_posts/core-samples/raspi-accessoires/2014-03-14-color-led.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-color-led.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/led1.jpg
 product: 70x 5mm Red/Green/Blue/Yellow/Purple/Pink/White LED Light w/ 90x Resistor
 description:
