--- a/_posts/core-samples/raspi-accessoires/2014-03-14-dc-buchse.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-dc-buchse.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/luesterklemme.jpg
 product: Adapter von Lüsterklemme auf 5,5/2,1mm DC-Buchse
 description:
