--- a/_posts/core-samples/raspi-accessoires/2014-03-14-litze.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-litze.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/litze.jpg
 product: 100 Meter Kabel Litze 0,04mm² / 0,9mm² entspricht 0,10€ / m
 description: Set Sortiment Kupfer
