--- a/_posts/core-samples/raspi-accessoires/2014-03-14-mopi.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-mopi.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/mopi.png
 product: MoPi
 description: Kickstarter to power the Raspi with different power sources + power switch.
