--- a/_posts/core-samples/raspi-accessoires/2014-03-14-step-down1.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-step-down1.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/step-down1.jpg
 product: Step Down Adjustable DC-DC Power Supply Module New
 description: LM2596
