--- a/_posts/core-samples/raspi-accessoires/2014-03-14-t-coppler.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-t-coppler.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/breakout.jpg
 product: T-Cobbler GPIO Breakout Kit für Raspberry Pi inkl. Breadboard / Steckboard
 description:
