--- a/_posts/core-samples/raspi-accessoires/2014-03-14-1-loetzinn.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-1-loetzinn.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/loetzinn.jpg
 product: Fixpoint 51062 Lötzinn 0,56mm 100g Rolle
 description:
