--- a/_posts/core-samples/raspi-accessoires/2014-03-14-1-raspi.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-1-raspi.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/raspi.jpg
 product: pi3g Raspberry Pi Model B Rev 2 512 MB im Gehäuse mit Netzteil + Cooling Kit
 description:
