--- a/_posts/core-samples/raspi-accessoires/2014-03-14-1k-poti.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-1k-poti.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/poti2.jpg
 product: 1K ohm Trim Pot Trimmer Potentiometer
 description: 10pcs 3296W-102
