--- a/_posts/core-samples/raspi-accessoires/2014-03-14-usb-kabel.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-usb-kabel.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/usb-kabel.jpg
 product: deleyCON 3m HDMI Kabel SLIM
 description:
