--- a/_posts/core-samples/raspi-accessoires/2014-03-14-white-led.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-white-led.md
@@ -1,5 +1,5 @@
 ---
-layout: entry
+layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/led2.jpg
 product: 100 Pcs 5mm Round White LED Super Bright Bulb Panel Board Lamp Light
 description:
