--- a/_posts/core-samples/raspi-accessoires/2014-03-14-1-sound-card.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-1-sound-card.md
@@ -4,7 +4,7 @@ preview: /assets/images/2014-03-12-raspi-accessoirs/sound-card.jpg
 product: USB 2.0 3D Soundkarte
 description: Sound card Audio Adapter 5.1
 price: 1€
-link: http://cgi.ebay.de/ws/eBayISAPI.dll?ViewItem&item=141071608953
+link: http://www.ebay.de/itm/141071608953
 categories:
 -
 
@@ -12,3 +12,5 @@ tags:
 - prototyping
 - accessoire
 ---
+
+{% include accessoires/accessoire-table %}
