--- a/_posts/core-samples/raspi-accessoires/2014-03-14-dc-buchse.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-dc-buchse.md
@@ -4,7 +4,7 @@ preview: /assets/images/2014-03-12-raspi-accessoirs/luesterklemme.jpg
 product: Adapter von Lüsterklemme auf 5,5/2,1mm DC-Buchse
 description:
 price: 2,29€
-link: http://cgi.ebay.de/ws/eBayISAPI.dll?ViewItem&item=310818240846
+link: http://www.ebay.de/itm/310818240846
 
 categories:
 -
@@ -13,3 +13,5 @@ tags:
 - prototyping
 - accessoire
 ---
+
+{% include accessoires/accessoire-table %}
