--- a/_posts/core-samples/raspi-accessoires/2014-03-14-usb-to-rs232.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-usb-to-rs232.md
@@ -1,10 +1,10 @@
 ---
 layout: post
 preview: /assets/images/2014-03-12-raspi-accessoirs/usb-out.jpg
-product: USB To RS232 TTL PL2303HX
-description: USB To RS232 TTL PL2303HX Auto Converter Module Converter Adapter For arduino
+product: USB To RS232
+description: TTL PL2303HX
 price: 1,74$
-link: USB To RS232 TTL PL2303HX Auto Converter Module Converter Adapter For arduino](http://www.ebay.com/itm/USB-To-RS232-TTL-PL2303HX-Auto-Converter-Module-Converter-Adapter-For-arduino-/180953299346?
+link: http://www.ebay.com/itm/USB-To-RS232-TTL-PL2303HX-Auto-Converter-Module-Converter-Adapter-For-arduino-/180953299346?
 
 categories:
 - converter
@@ -15,6 +15,7 @@ tags:
 - accessoire
 ---
 
-<img src="{{page.preview}}" style="width:100px"/>
+{% include accessoires/accessoire-table %}
+
 
 I usually use it to get power out of the usb plug - you can get 3.3 volt or 5 volt.
