--- a/_posts/core-samples/raspi-accessoires/2014-03-14-1-rt3570-wifi.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-1-rt3570-wifi.md
@@ -4,7 +4,7 @@ preview: /assets/images/2014-03-12-raspi-accessoirs/rt5370-wifi.jpg
 product: RT5370 USB Wifi WLAN Dongle Stick Adapter 5dBi Antenne
 description:
 price: 5,49€
-link: http://cgi.ebay.de/ws/eBayISAPI.dll?ViewItem&item=200800652743
+link: http://www.ebay.de/itm/200800652743
 
 categories:
 - wireless
@@ -13,3 +13,5 @@ tags:
 - wifi
 - accessoire
 ---
+
+{% include accessoires/accessoire-table %}
