--- a/_posts/core-samples/raspi-accessoires/2014-03-14-atx-raspi.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-atx-raspi.md
@@ -16,3 +16,7 @@ tags:
 ---
 
 {% include accessoires/accessoire-table %}
+
+## ATX Raspi
+ATX Raspi is a power switch for the Raspi. I bought it on [LowPowerLab](http://lowpowerlab.com/atxraspi/) for 21.53 EUR (included 7 EUR shipping from US to Germany).
+<iframe width="560" height="315"  src="//www.youtube.com/embed/XK-dLdLQdIE" frameborder="0"></iframe>
