--- a/_posts/core-samples/raspi-accessoires/2014-03-14-atx-raspi.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-atx-raspi.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+uuid: d5797a90-b074-11e3-a5e2-0800200c9a66
 preview: /assets/images/2014-03-12-raspi-accessoirs/atx-raspi.jpg
 product: LowPowerLab ATX Raspi
 description: Kickstarter Power switch for the Raspi. Bundled with a script to shutdown correctly.
