--- a/_posts/core-samples/raspi-accessoires/2014-03-14-basic-kit.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-basic-kit.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+uuid: eaeccfd0-b074-11e3-a5e2-0800200c9a66
 preview: /assets/images/2014-03-12-raspi-accessoirs/basic-kit.jpg
 product: Arduino Sidekick Basic Kit – Arduino DIY Kit
 description:
