--- a/_posts/core-samples/raspi-accessoires/2014-03-14-color-led.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-color-led.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+uuid: 119ef860-b075-11e3-a5e2-0800200c9a66
 preview: /assets/images/2014-03-12-raspi-accessoirs/led1.jpg
 product: 70x 5mm Red/Green/Blue/Yellow/Purple/Pink/White LED Light w/ 90x Resistor
 description:
