--- a/_posts/core-samples/raspi-accessoires/2014-03-14-rt3570-wifi.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-rt3570-wifi.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+uuid: 3bc5c360-b077-11e3-a5e2-0800200c9a66
 preview: /assets/images/2014-03-12-raspi-accessoirs/rt5370-wifi.jpg
 product: RT5370 USB Wifi WLAN Dongle Stick Adapter 5dBi Antenne
 description:
