--- a/_posts/core-samples/raspi-accessoires/2014-03-14-step-down2.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-step-down2.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+uuid: 43b0c830-b078-11e3-a5e2-0800200c9a66
 preview: /assets/images/2014-03-12-raspi-accessoirs/step-down2.jpg
 product: DC-DC Adjustable Step-up Power Converter Module
 description: LM2577
