--- a/_posts/core-samples/raspi-accessoires/2014-03-15-proto-pcb.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-15-proto-pcb.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+uuid: dd15bbc0-b078-11e3-a5e2-0800200c9a66
 preview: /assets/images/2014-03-12-raspi-accessoirs/proto-pcb.jpg
 product: 2 Pcs Top Quality 5x7cm Prototyping FR4 PCB Solder Finished for Arduino Project
 description: 5x7cm
