--- a/_posts/core-samples/raspi-accessoires/2014-03-14-5k-poti.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-5k-poti.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+uuid: b27bf590-b074-11e3-a5e2-0800200c9a66
 preview: /assets/images/2014-03-12-raspi-accessoirs/poti1.jpg
 product: 5K ohm Trim Pot Trimmer Potentiometer 3296W
 description: 10pcs, 3296W-502
