--- a/_posts/core-samples/raspi-accessoires/2014-03-14-lcd.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-lcd.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+uuid: 8550c760-b076-11e3-a5e2-0800200c9a66
 preview: /assets/images/2014-03-12-raspi-accessoirs/display.jpg
 product: 2004 LCD Module Display Anzeigen 20×4 Zeichen
 description: kompatibel mit HD44780
