--- a/_posts/core-samples/raspi-accessoires/2014-03-14-loetzinn.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-loetzinn.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+uuid: a3e1f190-b076-11e3-a5e2-0800200c9a66
 preview: /assets/images/2014-03-12-raspi-accessoirs/loetzinn.jpg
 product: Fixpoint 51062 Lötzinn 0,56mm 100g Rolle
 description:
