--- a/_posts/core-samples/raspi-accessoires/2014-03-14-raspi.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-raspi.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+uuid: 130d6a90-b077-11e3-a5e2-0800200c9a66
 preview: /assets/images/2014-03-12-raspi-accessoirs/raspi.jpg
 product: pi3g Raspberry Pi Model B Rev 2 512 MB im Gehäuse mit Netzteil + Cooling Kit
 description:
