--- a/_posts/core-samples/raspi-accessoires/2014-03-14-t-coppler.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-t-coppler.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+uuid: 4d8e6ab0-b078-11e3-a5e2-0800200c9a66
 preview: /assets/images/2014-03-12-raspi-accessoirs/breakout.jpg
 product: T-Cobbler GPIO Breakout Kit für Raspberry Pi inkl. Breadboard / Steckboard
 description:
