--- a/_posts/core-samples/raspi-accessoires/2014-03-14-usb-kabel.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-usb-kabel.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+uuid: 7ed43f50-b078-11e3-a5e2-0800200c9a66
 preview: /assets/images/2014-03-12-raspi-accessoirs/usb-kabel.jpg
 product: deleyCON 3m HDMI Kabel SLIM
 description:
