--- a/_posts/core-samples/raspi-accessoires/2014-03-14-usb-to-rs232.md
+++ b/_posts/core-samples/raspi-accessoires/2014-03-14-usb-to-rs232.md
@@ -1,5 +1,6 @@
 ---
 layout: post
+uuid: 98a45f00-b078-11e3-a5e2-0800200c9a66
 preview: /assets/images/2014-03-12-raspi-accessoirs/usb-out.jpg
 product: USB To RS232
 description: TTL PL2303HX
