--- a/_posts/2014-03-31-heroku.md
+++ b/_posts/2014-03-31-heroku.md
@@ -17,7 +17,7 @@ published: true
 This blog post was in need to setup prose gatekeeper on heroku to be able to get oAuth2 working
 with github.
 
-# Planned Commands
+# Commands
 
 - Create an app on Heroku
 - List remote repositories
@@ -28,27 +28,37 @@ git remote -v
 {% highlight bash linenos=table %}
 git push heroku master
 {% endhighlight %}
+
 - Logging
 {% highlight bash linenos=table %}
 heroku logs --app maltretieren
 {% endhighlight %}
+
 - Remove app
 {% highlight bash linenos=table %}
 git remote rm heroku
 {% endhighlight %}
+
 - Add a repository
 {% highlight bash linenos=table %}
 git remote add heroku git@heroku.com:maltretieren.git
 {% endhighlight %}
+
 - Restart
 {% highlight bash linenos=table %}
 heroku restart
 {% endhighlight %}
+
 - Changes
 {% highlight bash linenos=table %}
 git add .
 git commit -am "save all changed files & remove deleted ones"
 git push heroku master
+{% endhighlight %}
+
+- Set environment variables
+{% highlight bash linenos=table %}
+heroku config:add OAUTH_CLIENT_ID=GITHUB_CLIENT_ID OAUTH_CLIENT_SECRET=GITHUB_CLIENT_SECRET NODE_ENV=production
 {% endhighlight %}
 -
 
