--- a/_posts/2014-01-01-sandbox.md
+++ b/_posts/2014-01-01-sandbox.md
@@ -32,7 +32,7 @@ alert(helloWorld);
 ## Images
 ![Develop local, run remote](/assets/images/DevEnvironment.png)
 
-## Prevent jekyll from interprating brackets
+## Prevent Jekyll from interpreting brackets
 {% raw %}
 {{page.title}}
 {% endraw %}
