--- a/_posts/2014-03-31-heroku.md
+++ b/_posts/2014-03-31-heroku.md
@@ -60,5 +60,17 @@ git push heroku master
 {% highlight bash linenos=table %}
 heroku config:add OAUTH_CLIENT_ID=GITHUB_CLIENT_ID OAUTH_CLIENT_SECRET=GITHUB_CLIENT_SECRET NODE_ENV=production
 {% endhighlight %}
--
+
+# Install gatekeeper on Heroku
+
+
+{% highlight bash linenos=table %}
+    git clone git@github.com:prose/gatekeeper.git
+    cd gatekeeper
+    heroku create maltretieren
+    heroku config:add OAUTH_CLIENT_ID=GITHUB_CLIENT_ID OAUTH_CLIENT_SECRET=GITHUB_CLIENT_SECRET NODE_ENV=production
+    git push heroku master
+    heroku open
+{% endhighlight %}
+
 
