--- a/_posts/2014-03-31-heroku.md
+++ b/_posts/2014-03-31-heroku.md
@@ -14,7 +14,7 @@ published: true
 
 {% include JB/setup %}
 
-This blog post was in need to setup prose gatekeeper on heroku to be able to get oAuth2 working
+This bloggg post was in need to setup prose gatekeeper on heroku to be able to get oAuth2 working
 with github.
 
 # Commands
