--- a/_posts/2014-03-31-heroku.md
+++ b/_posts/2014-03-31-heroku.md
@@ -19,6 +19,8 @@ published: true
 This blogg post was in need to setup prose gatekeeper on heroku to be able to get oAuth2 working
 with github.
 
+test
+
 # Commands
 
 - Create an app on Heroku
