--- a/_posts/2014-04-13-tst.md
+++ b/_posts/2014-04-13-tst.md
@@ -3,7 +3,7 @@
 layout: post
 categories: 
   - frontpage
-tagline: with github.js
+tagline:
 tags: 
   - development
   - jekyll
@@ -12,5 +12,3 @@ published: true
 ---
 
 {% include JB/setup %}
-
-TEST
