--- a/_posts/2014-02-27-ssh.md
+++ b/_posts/2014-02-27-ssh.md
@@ -8,17 +8,14 @@ tags:
 published: true
 ---
 
-## Install nodejs/npm on Raspberry Pi
-http://joshondesign.com/2013/10/23/noderpi
+## Activate password authentication on Mac
 
-### Setup system-wide environment variables
-sudo vi /etc/environment
+sudo vim /private/etc/sshd_config
+Uncomment #PasswordAuthentication yes
 
-NODE_JS_HOME=/home/pi/node-v0.10.2-linux-arm-pi
-PATH=$PATH:$NODE_JS_HOME/bin
+Activate "Remote Login" -> http://bluishcoder.co.nz/articles/mac-ssh.html
 
-### Access Permissions
-Do not use "sudo" for install npm packages. Instead change permissions on the folders for curront user...
+connect via sshfs
+sshfs -o nonempty -o sshfs_debug crunsh@192.168.178.26:/Users/crunsh/Documents/node_workspace/sound /home/pi/workspace_remote/sound
 
-## Nodejs Video Tutorials
-[Modular web applications with Node.js and Express](http://vimeo.com/56166857)
+
