--- a/_posts/2014-03-31-heroku.md
+++ b/_posts/2014-03-31-heroku.md
@@ -66,7 +66,7 @@ heroku config:add OAUTH_CLIENT_ID=GITHUB_CLIENT_ID OAUTH_CLIENT_SECRET=GITHUB_CL
 # Install gatekeeper on Heroku
 
 
-{% highlight bash %}
+{% highlight %}
     git clone git@github.com:prose/gatekeeper.git
     cd gatekeeper
     heroku create maltretieren
