--- a/_posts/2014-01-01-sandbox.md
+++ b/_posts/2014-01-01-sandbox.md
@@ -11,9 +11,10 @@ commentIssueId: 1
 ---
 
 {% include JB/setup %}
-test
+
 ## Syntax Highlighting
-For more pygment css styles see [pygments-css](https://github.com/richleland/pygments-css) : replace .codehilite with .highlight for these to work with Jekyll
+
+For more pygment css styles see [pygments-css](https://github.com/richleland/pygments-css) or [Solarized Light](http://ethanschoonover.com/solarized). Replace .codehilite with .highlight for these to work with Jekyll
 {% highlight javascript linenos=table %}
 var helloWorld = "Hello Jekyll";
 alert(helloWorld);
