--- a/_posts/2014-03-31-heroku.md
+++ b/_posts/2014-03-31-heroku.md
@@ -23,7 +23,7 @@ with github.
 
 - Create an app on Heroku
 - List remote repositories
-{% highlight bash linenos=table %}
+{% highlight shell linenos=table %}
 git remote -v
 {% endhighlight %}
 - Push app to heroku
