--- a/_posts/2014-03-31-heroku.md
+++ b/_posts/2014-03-31-heroku.md
@@ -23,9 +23,10 @@ with github.
 
 - Create an app on Heroku
 - List remote repositories
-{% highlight shell linenos=table %}
+{% highlight bash linenos=table %}
 git remote -v
 {% endhighlight %}
+
 - Push app to heroku
 {% highlight bash linenos=table %}
 git push heroku master
@@ -43,7 +44,7 @@ git remote rm heroku
 
 - Add a repository
 {% highlight bash linenos=table %}
-git remote add heroku git@heroku.com:maltretieren.git
+  git remote add heroku git@heroku.com:maltretieren.git
 {% endhighlight %}
 
 - Restart
