--- a/_posts/2014-05-13-test2.md
+++ b/_posts/2014-05-13-test2.md
@@ -1,14 +1,14 @@
 ---
-
 layout: post
 categories: 
-  - template
+ - template
 tagline: small letters after the title
 tags: 
-  - example
-  - example2
+ - example
+ - example2
 published: true
-
+frontpage: true
 ---
+
 
 {% include JB/setup %}
