--- a/_posts/2014-05-13-test.md
+++ b/_posts/2014-05-13-test.md
@@ -1,13 +1,14 @@
 ---
 layout: post
 categories: 
- - frontpage
+ - test
 tagline: small letters after the title
 tags: 
  - example
 published: true
 frontpage: true
 ---
+
 
 
 {% include JB/setup %}
