--- a/_posts/2014-05-13-test.md
+++ b/_posts/2014-05-13-test.md
@@ -1,8 +1,6 @@
 ---
 layout: post
-categories: 
- - test
-tagline: small letters after the title
+categories: tagline: small letters after the title
 tags: 
  - example
 published: true
