--- a/_posts/2014-05-13-test.md
+++ b/_posts/2014-05-13-test.md
@@ -2,12 +2,14 @@
 layout: post
 categories: 
  - test
+ - test2
 tagline: small letters after the title
 tags: 
  - example
-published: true
+published: false
 frontpage: true
 ---
+
 {% include JB/setup %}
 
 test
