--- a/_posts/2014-05-13-test.md
+++ b/_posts/2014-05-13-test.md
@@ -6,10 +6,9 @@ categories:
 tagline: small letters after the title
 tags: 
  - example
-published: false
+published: true
 frontpage: true
 ---
-
 {% include JB/setup %}
 
 test
