--- a/_posts/2014-03-31-heroku.md
+++ b/_posts/2014-03-31-heroku.md
@@ -1,19 +1,14 @@
 ---
-
 layout: post
-categories: 
-  - frontpage
-tagline: with github.js
+categories: tagline: with github.js
 tags: 
-  - development
-  - jekyll
-  - edit
-  - github
-
+ - development
+ - jekyll
+ - edit
+ - github
 published: true
-
+frontpage: true
 ---
-
 {% include JB/setup %}
 
 This blog post was in need to setup prose gatekeeper on heroku to be able to get oAuth2 working
