--- a/_posts/2014-03-31-heroku.md
+++ b/_posts/2014-03-31-heroku.md
@@ -1,15 +1,20 @@
 ---
-layout: post
+layout:
+post
 categories:
-tagline: with github.js
-tags: 
+tagline:
+with github.js
+tags:
  - development
  - jekyll
  - edit
  - github
-published: true
-frontpage: true
+published:
+true
+frontpage:
+false
 ---
+
 {% include JB/setup %}
 
 This blog post was in need to setup prose gatekeeper on heroku to be able to get oAuth2 working
