--- a/_posts/2014-05-13-test2.md
+++ b/_posts/2014-05-13-test2.md
@@ -1,14 +1,15 @@
 ---
 layout: post
-categories: 
+categories:
  - template
 tagline: small letters after the title
-tags: 
+tags:
  - example
  - example2
 published: true
-frontpage: true
+frontpage: false
 ---
+
 
 
 
