--- a/_posts/2014-05-15-Similiar.md
+++ b/_posts/2014-05-15-Similiar.md
@@ -1,13 +1,14 @@
 ---
 layout: post
-categories: 
+categories:
  - template
 tagline: small letters after the title
-tags: 
+tags:
  - example
 published: true
-frontpage: true
+frontpage: false
 ---
+
 
 
 
