--- a/_posts/2014-01-01-sandbox.md
+++ b/_posts/2014-01-01-sandbox.md
@@ -7,11 +7,8 @@ tags:
   - development
   - test
 published: true
-commentIssueId: 1
+frontpage: true
 ---
-
-{% include JB/setup %}
-
 ## Syntax Highlighting
 
 For more pygment css styles see [pygments-css](https://github.com/richleland/pygments-css) or [Solarized Light](http://ethanschoonover.com/solarized). Replace .codehilite with .highlight for these to work with Jekyll
