--- a/_posts/2014-01-01-sandbox.md
+++ b/_posts/2014-01-01-sandbox.md
@@ -9,6 +9,8 @@ tags:
 published: true
 frontpage: true
 ---
+This page gives you an idea how you can design your posts. You can use the source code to copy it.
+
 ## Syntax Highlighting
 
 For more pygment css styles see [pygments-css](https://github.com/richleland/pygments-css) or [Solarized Light](http://ethanschoonover.com/solarized). Replace .codehilite with .highlight for these to work with Jekyll
