--- a/_posts/2014-01-01-sandbox.md
+++ b/_posts/2014-01-01-sandbox.md
@@ -13,6 +13,13 @@ This page gives you an idea how you can design your posts. You can use the sourc
 
 <!-- more -->
 
+## Front Page
+Use
+{% raw %}
+<!-- more -->
+{% endraw %}
+to cut the content of the post to be presented on the frontpage. If you don't put it there, it will show 60 words by default.
+
 ## Syntax Highlighting
 
 For more pygment css styles see [pygments-css](https://github.com/richleland/pygments-css) or [Solarized Light](http://ethanschoonover.com/solarized). Replace .codehilite with .highlight for these to work with Jekyll
