--- a/_posts/2014-01-01-sandbox.md
+++ b/_posts/2014-01-01-sandbox.md
@@ -14,11 +14,7 @@ This page gives you an idea how you can design your posts. You can use the sourc
 <!-- more -->
 
 ## Front Page
-Use
-{% raw %}
-<!-- more -->
-{% endraw %}
-to cut the content of the post to be presented on the frontpage. If you don't put it there, it will show 60 words by default.
+Use <!-- more --> to cut the content of the post to be presented on the frontpage. If you don't put it there, it will show 60 words by default.
 
 ## Syntax Highlighting
 
