--- a/_posts/2014-05-15-Similar.md
+++ b/_posts/2014-05-15-Similar.md
@@ -6,8 +6,9 @@ tagline: small letters after the title
 tags:
  - example
 published: true
-frontpage: false
+frontpage: true
 ---
+
 This is a documentation of different sites and techniques similar to the service this blog provides (WYSIWYG Jekyll). 
 
 [Introducing Jekyll Hook](http://developmentseed.org/blog/2013/05/01/introducing-jekyll-hook/)
