--- a/_posts/2014-05-15-Similar.md
+++ b/_posts/2014-05-15-Similar.md
@@ -9,6 +9,8 @@ published: true
 frontpage: true
 ---
 
+
 This is a documentation of different sites and techniques similar to the service this blog provides (WYSIWYG Jekyll). 
 
-[Introducing Jekyll Hook](http://developmentseed.org/blog/2013/05/01/introducing-jekyll-hook/)
+- [Introducing Jekyll Hook](http://developmentseed.org/blog/2013/05/01/introducing-jekyll-hook/)
+- [Spintoapp](http://www.spintoapp.com/)
