--- a/_posts/2014-07-10-mopi.md
+++ b/_posts/2014-07-10-mopi.md
@@ -16,6 +16,7 @@ frontpage: true
 published: true
 ---
 
+
 {% include accessoires/accessoire-table %}
 
-My Mopi just arrived from the UK - and it is working! A big thanks to Hamish Cunningham for all the work he has put into it. On this page I will document the configuration and findings for the Mopi...
+My Mopi just arrived from the UK - and it is working! A big thanks to <a href="https://www.kickstarter.com/profile/hamishcunningham">Hamish Cunningham</a> for all the work he has put into it. On this page I will document the configuration and findings for the Mopi...
