--- a/_posts/2014-10-07-ssh.md
+++ b/_posts/2014-10-07-ssh.md
@@ -10,4 +10,12 @@ published: true
 
 ## Activate password authentication on Mac
 
-test
+sudo vim /private/etc/sshd_config
+Uncomment #PasswordAuthentication yes
+
+Activate "Remote Login" -> http://bluishcoder.co.nz/articles/mac-ssh.html
+
+connect via sshfs
+sshfs -o nonempty -o sshfs_debug crunsh@192.168.178.26:/Users/crunsh/Documents/node_workspace/sound /home/pi/workspace_remote/sound
+
+
