--- a/_posts/2014-05-15-Similar.md
+++ b/_posts/2014-05-15-Similar.md
@@ -6,8 +6,9 @@ tagline: small letters after the title
 tags:
  - example
 published: true
-frontpage: true
+frontpage: false
 ---
+
 
 
 This is a documentation of different sites and techniques similar to the service this blog provides (WYSIWYG Jekyll). 
