--- a/_posts/2014-01-01-sandbox.md
+++ b/_posts/2014-01-01-sandbox.md
@@ -1,20 +1,21 @@
 ---
 layout: post
-categories: 
-  - test
+categories:
+ - test
 tagline: a post to the main page
-tags: 
-  - development
-  - test
+tags:
+ - development
+ - test
 published: true
-frontpage: true
+frontpage: false
 ---
+
 This page gives you an idea how you can design your posts. You can use the source code to copy it.
 
 <!-- more -->
 
 ## Front Page
-
+To view a new post on the frontpage check the "Frontpage" checkbox under "Advanded settings" when you create a new post.
 
 ## Syntax Highlighting
 
