--- a/_posts/2014-01-01-sandbox.md
+++ b/_posts/2014-01-01-sandbox.md
@@ -7,8 +7,9 @@ tags:
  - development
  - test
 published: true
-frontpage: false
+frontpage: true
 ---
+
 This page gives you an idea how you can design your posts. You can use the source co de to copy it.   
 
 <!-- more -->
