--- a/_posts/2014-01-01-sandbox.md
+++ b/_posts/2014-01-01-sandbox.md
@@ -1,14 +1,12 @@
 ---
 layout: post
 categories:
- - test
-tagline: a post to the main page
+tagline: for you
 tags:
- - development
- - test
 published: true
 frontpage: true
 ---
+
 
 
 This page gives you an idea how you can design your posts. You can use the source code to copy it.   
