--- a/_posts/2014-01-01-sandbox.md
+++ b/_posts/2014-01-01-sandbox.md
@@ -1,11 +1,14 @@
 ---
 layout: post
 categories:
-tagline: for you
+ - example
+tagline: to play
 tags:
+ - example
 published: true
 frontpage: true
 ---
+
 
 
 
