--- a/_posts/2014-01-01-sandbox.md
+++ b/_posts/2014-01-01-sandbox.md
@@ -9,15 +9,12 @@ published: true
 frontpage: true
 ---
 
-
-
-
 This page gives you an idea how you can design your posts. You can use the source code to copy it.   
 
 <!-- more -->
 
 ## Front Page
-To view a new post on the frontpage check the "Frontpage" checkbox under "Advanded settings" when you create/edit a new post.
+To view a new post on the frontpage check the "Frontpage" checkbox under "Advanded settings" when you create/edit a post.
 
 ## Syntax Highlighting
 
