--- a/_posts/2014-01-01-sandbox.md
+++ b/_posts/2014-01-01-sandbox.md
@@ -8,7 +8,6 @@ tags:
 published: true
 frontpage: true
 ---
-
 This page gives you an idea how you can design your posts. You can use the source code to copy it.   
 
 <!-- more -->
@@ -22,6 +21,12 @@ For more pygment css styles see [pygments-css](https://github.com/richleland/pyg
 {% highlight javascript linenos=table %}
 var helloWorld = "Hello Jekyll";
 alert(helloWorld);
+{% endhighlight %}
+
+{% highlight ruby %}
+def foo
+  puts 'foo'
+end
 {% endhighlight %}
 
 ## Include HTML Widgets
@@ -41,7 +46,3 @@ alert(helloWorld);
 
 ## Images
 ![Develop local, run remote](/assets/images/DevEnvironment.png)
-
-
-
-
