--- a/_posts/2014-01-01-sandbox.md
+++ b/_posts/2014-01-01-sandbox.md
@@ -39,7 +39,7 @@ end
 {% endraw %}
 
 ## Include GISTS
-{% gist 9092977 filename.markdown %}
+{% gist 9092977 %}
 
 ## Embed YouTube videos
 <iframe width="560" height="315"  src="//www.youtube.com/embed/XK-dLdLQdIE" frameborder="0"></iframe>
